fix: Remove truncate in everything

--- a/src/app.css
+++ b/src/app.css
@@ -4,10 +4,6 @@
 @tailwind variants;
 
 @layer base {
-    * {
-        @apply truncate;
-    }
-
     html {
         font-family: 'Inter', system-ui, sans-serif;
     }
